# linera-micro-bets

./: .gitignore  CHECK_FRONTEND_IN_GIT.md  CONNECT_TO_LINERA.md  DEPLOY_VERCEL.md  FIX_AUTH_ERROR.md  FIX_FRONTEND_GIT.md  FIX_NESTED_GIT.md  FORM_TECH_STACK.md  GITHUB_TOKEN_GUIDE.md  README.md  SUBMISSION_ABOUT.md  SUBMISSION_FORM_CONTENT.md  TAGLINE_100_CHARS.md  VERCEL_ENV_VARS.md  VERCEL_FIXES.md  VERCEL_IMPORT_STEPS.md  VERCEL_ROOT_DIRECTORY_FIX.md  VERCEL_ROOT_DIRECTORY_FIX_NOW.md  VERCEL_WORKAROUND.md  VERIFY_GITHUB.md  YOUTUBE_TITLE_FINAL.md  YOUTUBE_VIDEO_TITLES.md  deploy-micro-bet.sh  keystore.json  start-linera-service.sh  wallet.json
client.db/table_linera/: 000031.sst  000034.sst  IDENTITY  LOG  LOG.old.1769081716401500  LOG.old.1769081720749414  LOG.old.1769081926167328  LOG.old.1769082393191356  LOG.old.1769082600172256  LOG.old.1769082666531217  LOG.old.1769082947629854  LOG.old.1769083184902923  LOG.old.1769083898215234  MANIFEST-000052
examples/: Cargo.toml
examples/micro-bet/: Cargo.toml
examples/micro-bet/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
linera-protocol/: .dockerignore  .editorconfig  .env.example  .gcloudignore  .git-blame-ignore-revs  .gitignore  .taplo.toml  CLI.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  Makefile  README.md  clippy.toml  default.nix  flake.nix  keystore.json  linera-protocol.code-workspace  packages.txt  rustfmt.toml  shell.nix  spellcheck-cfg.toml  spellcheck-dictionary.txt  wallet.json
(+1226 files in other folders)
