[package]
name = "micro-bet"
version = "0.1.0"
authors = ["StormCast Team"]
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
linera-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true }

[[bin]]
name = "micro_bet_contract"
path = "src/contract.rs"

[[bin]]
name = "micro_bet_service"
path = "src/service.rs"
